# TrustTunnelClient

./: .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  conandata.yml  conanfile.py
.devcontainer/: Dockerfile  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug report.yaml  question.yaml
.github/workflows/: lint-rust.yml  qt-clients-submodules.yml  release-build.yml  run-tests.yml  windows-installer.yml
bamboo-specs/: bamboo.yaml  deploy_cli.yaml  increment-version.yaml  run-browser-integration-test.yaml  run-instrumented-test.yaml  run-integration-test.yaml  run-tests.yaml  upload-conan-recipes.yaml
cmake/: add_unit_test.cmake
common/: CMakeLists.txt
common/include/vpn/: event_loop.h  guid_utils.h  utils.h
common/src/: default_settings.h  event_loop.cpp  fsm_validation.cpp  guid_utils.cpp  platform.cpp  utils.cpp
common/test/: test_event_loop.cpp
core/: CMakeLists.txt
core/include/vpn/: vpn.h
core/include/vpn/internal/: client_listener.h  dns_proxy_accessor.h  domain_filter.h  domain_lookuper.h  endpoint_connector.h  server_upstream.h  tunnel.h  utils.h  vpn_client.h  vpn_connection.h  vpn_dns_resolver.h
core/src/: direct_upstream.cpp  direct_upstream.h  dns_client.cpp  dns_client.h  dns_handler.cpp  dns_handler.h  dns_proxy_accessor.cpp  domain_filter.cpp  domain_lookuper.cpp  fallbackable_upstream_connector.cpp  fallbackable_upstream_connector.h  http2_upstream.cpp  http2_upstream.h  http3_upstream.cpp  http3_upstream.h  http_udp_multiplexer.cpp  icmp_manager.cpp  memfile_buffer.cpp  multiplexable_upstream.h  plain_dns_manager.cpp  plain_dns_manager.h  plain_dns_message_handler.cpp  plain_dns_message_handler.h  single_upstream_connector.cpp  single_upstream_connector.h  tun_device_listener.cpp  tun_device_listener.h  tunnel.cpp  upstream_multiplexer.cpp  upstream_multiplexer.h  utils.cpp  vpn_client.cpp  vpn_connection.cpp  vpn_dns_resolver.cpp  vpn_fsm.cpp  vpn_manager.cpp  vpn_manager.h
core/test/: mock_dns_server.cpp  mock_dns_server.h  test_dns_routing.cpp  test_domain_filter.cpp  test_domain_lookuper.cpp  test_http_udp_multiplexer.cpp  test_mock_c.cpp  test_mock_vpn_client.cpp  test_quic_connection_migration.cpp  test_tunnel.cpp  test_upstream_multiplexer.cpp  test_utils.cpp  test_vpn_client_fsm.cpp  test_vpn_client_live.cpp  test_vpn_dns_resolver.cpp  test_vpn_manager_fsm.cpp  test_vpn_manager_fsm_recovery.cpp
core/test/standalone_client/: CMakeLists.txt  README.md  config.cpp  standalone_client.conf  standalone_client.cpp
core/test/standalone_client/setup_wizard/: Cargo.toml
core/test/standalone_client/setup_wizard/src/: main.rs  settings.rs  user_interaction.rs
integration-tests/: .gitignore  Dockerfile  README.md  build_client.sh  build_endpoint.sh  docker_build.sh  docker_run_tests.sh  integration_test.sh
integration-tests/client/: Dockerfile  entrypoint.sh  socks_tests.sh  tun_tests.sh
integration-tests/endpoint/: Dockerfile
integration-tests/image/: Dockerfile  package.json
integration-tests/network-load-simulator/: Dockerfile  entrypoint.sh  get_location.sh  index.js  package.json
integration-tests/tests/: client_run.sh  client_setup.sh  endpoint_run.sh  endpoint_setup.sh
net/: CMakeLists.txt
net/include/net/: dns_manager.h  dns_utils.h  locations_pinger.h  network_manager.h  os_tunnel.h  quic_connector.h  quic_utils.h  socks5_listener.h  tcp_socket.h  tls.h  udp_socket.h  utils.h
net/src/: dns_manager.cpp  dns_utils.cpp  http1.cpp  http2.cpp  http_stream.cpp  locations_pinger.cpp  locations_pinger_runner.cpp  mac_dns_settings_manager.mm  network_manager.cpp  os_tunnel.cpp  os_tunnel_linux.cpp  os_tunnel_mac.cpp  os_tunnel_win.cpp  os_tunnel_win.h  ping.cpp  ping.h  quic_connector.cpp  quic_utils.cpp  socket_manager.cpp  socks5_listener.cpp  tcp_socket.cpp  tls.cpp  tls13_utils.cpp  udp_socket.cpp  util.cpp  utils.cpp  wfp_firewall.cpp  wfp_firewall.h
net/test/: ja4.cpp  ja4.h  test_dns_utils.cpp  test_locations_pinger.cpp  test_locations_pinger_runner.cpp  test_net_utils.cpp  test_ping.cpp  test_quic_parse.cpp  test_tls_serialize.cpp
platform/android/: settings.gradle.kts
platform/android/lib/src/main/cpp/: CMakeLists.txt  deeplink.cpp  lib.cpp  native_logger.cpp
platform/apple/: Podfile  README.md  TrustTunnelClient.podspec  build_framework.sh
platform/windows/: CMakeLists.txt  README.md
platform/windows/src/: vpn_easy.cpp
scripts/: bootstrap_conan_deps.py  conan_export.py  increment_version.sh  install.sh  win_sign_binary.py
standalone/: CMakeLists.txt  standalone_client.cpp
standalone/include/vpn/standalone/: client.h  config.h
standalone/setup_wizard/: Cargo.toml
standalone/setup_wizard/src/: main.rs  settings.rs  template_settings.rs
standalone/src/: client.cpp  config.cpp  standalone_client.cpp
standalone_client/: CMakeLists.txt  README.md  config.cpp  config.h  standalone_client.cpp
standalone_client/setup_wizard/src/: composer.rs  main.rs  settings.rs  template_settings.rs
tcpip/: CMakeLists.txt
tcpip/include/tcpip/: tcpip.h
tcpip/src/: ip_hooks.cpp  libevent_lwip.cpp  tcp_conn_manager.cpp  tcp_raw.cpp  tcpip_api.cpp  tcpip_common.cpp  tcpip_common.h  udp_conn_manager.cpp
tcpip/src/arch/: cc.h
tcpip/test/: test_tun_echo.cpp  test_util.cpp  test_vpn_packet_pool.cpp
trusttunnel/: CMakeLists.txt  Cargo.toml  README.md  trusttunnel_client.rc
trusttunnel/deeplink-ffi/: Cargo.toml
trusttunnel/deeplink-ffi/include/: trusttunnel_deeplink.h
trusttunnel/deeplink-ffi/src/: lib.rs
trusttunnel/include/vpn/trusttunnel/: auto_network_monitor.h  client.h  config.h  version.h
trusttunnel/settings/: Cargo.toml
trusttunnel/settings/src/: lib.rs
trusttunnel/setup_wizard/: .gitignore  Cargo.toml  build.rs
trusttunnel/setup_wizard/resources/: setup_wizard.rc
trusttunnel/setup_wizard/src/: composer.rs  main.rs  settings.rs  version.rs
trusttunnel/src/: AppleSleepNotifier.h  AppleSleepNotifier.mm  auto_network_monitor.cpp  client.cpp  config.cpp  connection_info.cpp  trusttunnel_client.cpp  utils.cpp  utils.h
(+45 files in other folders)
